--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -18,6 +18,16 @@
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   }
 
+  .spinner {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.35);
+    height: 100%;
+    width: 100%;
+    min-height: 100vh;
+  }
+
   .font-family-montserrat {
     font-family: "Montserrat", sans-serif;
   }
